--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.kpwbo",
+    "name": "com.kpwbo.maps-rpg",
     "displayName": "Maps RPG",
     "version": "1.0.0",
     "description": "A sample Apache Cordova application that responds to the deviceready event.",
