--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Apache Cordova Team",
+    "author": "Jovan El Hoayek",
     "license": "Apache-2.0",
     "dependencies": {
         "cordova-android": "7.0.0",
